WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114040
Web Inspector: [Mac] Exception trying to open and create a database
https://bugs.webkit.org/show_bug.cgi?id=114040
Summary
Web Inspector: [Mac] Exception trying to open and create a database
Timothy Hatcher
Reported
2013-04-05 09:09:44 PDT
There is a DOM exception when opening the Safari Inspector because the quota client methods are not implemented.
Attachments
Proposed Change
(5.52 KB, patch)
2013-04-05 09:27 PDT
,
Timothy Hatcher
andersca
: review+
timothy
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2013-04-05 09:27:45 PDT
Created
attachment 196643
[details]
Proposed Change
Timothy Hatcher
Comment 2
2013-04-05 09:38:56 PDT
r147754
Timothy Hatcher
Comment 3
2013-04-05 10:30:14 PDT
***
Bug 114038
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug