Allow the Web Inspector to use WebSQL.

This fixes an exception on load in the Safari Web Inspector.

https://webkit.org/b/114040
rdar://problem/13581422

Reviewed by Anders Carlsson.

Source/WebKit/mac:

* WebCoreSupport/WebInspectorClient.mm:
(-[WebInspectorWindowController webView:frame:exceededDatabaseQuotaForSecurityOrigin:database:]): Added.

Source/WebKit2:

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::exceededDatabaseQuota): Added.
(WebKit::WebInspectorProxy::platformCreateInspectorPage): Hook up exceededDatabaseQuota.

Canonical link: https://commits.webkit.org/132396@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147754 268f45cc-cd09-0410-ab3c-d52691b4dbfc